# ocaml-datastructures-algorithms

./: .gitignore  AGENTS.md  Algos.md  CLAUDE.md  JOURNAL.md  LICENSE  Makefile  README.md  _oasis  array_utils.ml  avl.ml  avl_tree.py  binary_heap.py  bst.ml  btree.ml  continuation.ml  dijkstra.ml  document_distance.py  dune-project  functor.ml  graph.ml  graph.py  heaps.ml  list_utils.ml  main.ml  misc.ml  myocamlbuild.ml  ods.install  ods.opam  queue.ml  rbtree.ml  search.ml  setup.ml  shell.ml  sorting.ml  test.ml  utils.ml
.factory/: STANDARDS.md
WORKFLOWS/: standards-check.md
_build/: _digests  _log  main.ml.depends  sorting.ml.depends  utils.ml.depends
archive/: btree.ml  counting.ml  merge_list.ml  queue.ml
core/: bag.ml  pqueue.ml  queue.ml  set.ml  stack.ml
datastructures/: binary_tree.ml  binaryheap.ml  binarysearchtree.ml  btree.ml  simpletree.ml  skiplist.ml  splaytree.ml
distance/: distance.ml
graph/: dijkstra.py  graph.ml  graph2.py  graphs.ml
heap/: heaps.ml
lib/: .merlin  META  avl.ml  binary_tree.ml  bst.ml  bst.mli  dijkstra.ml  dsa.mldylib  dune  main.ml  red_black_tree.ml  set.ml  sort.ml  sort.mli  sorting.ml  sorting.mli
math/: fib.ml
misc/: bag.ml  maze.ml  stack.ml
ocaml/: pqueue.ml
ods-haskell/: ods-haskell.cabal
ods-haskell/src/: .#Lib.hs
ods-haskell/src/Data/: BinaryHeap.hs  BinaryTree.hs  RedBlackTree.hs
ods-haskell/src/Data/Algorithms/: InsertionSort.hs
ods-ocaml/: bst.ml
old/: continuation.ml
python/: avl_tree.py  heap.py  treelist.py  trie.py
search/: search.ml
sort/: sort.ml
sorting/: sorting.ml
(+149 files in other folders)
